2015-04-04 Helen 个人中心 界面切图替换

--- a/shippingcity/res/layout/activity_forget_password.xml
+++ b/shippingcity/res/layout/activity_forget_password.xml
@@ -3,13 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp" >
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:paddingTop="10dp"
+     >
 
     <com.ateam.shippingcity.widget.HAutoCompleteTextView
         android:id="@+id/et_mobile"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="请输入手机号"
+        android:textSize="14sp"
+        android:textColor="#a9a9a9"
         android:minHeight="50dp" />
 
     <LinearLayout
@@ -27,6 +32,8 @@
             android:hint="请输入验证码"
             android:inputType="number"
             android:minHeight="50dp"
+            android:textSize="14sp"
+        	android:textColor="#a9a9a9"
             android:paddingLeft="10dp"
             android:paddingRight="10dp" >
         </com.ateam.shippingcity.widget.HAutoCompleteTextView>
@@ -40,7 +47,7 @@
             android:minWidth="120dp"
             android:paddingRight="10dp"
             android:text="获取验证码"
-            android:textColor="#7FB4FF" />
+            android:textColor="#64a6FF" />
     </LinearLayout>
 
     <com.ateam.shippingcity.widget.HAutoCompleteTextView
@@ -49,6 +56,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="请输入新密码"
+        android:textSize="14sp"
+        android:textColor="#a9a9a9"
         android:inputType="textPassword"
         android:minHeight="50dp" />
 
@@ -58,17 +67,20 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="确认新密码"
+        android:textSize="14sp"
+        android:textColor="#a9a9a9"
         android:inputType="textPassword"
         android:minHeight="50dp" />
     
     <Button 
         android:id="@+id/btn_sure"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="80dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="完成"
-        android:background="#FF9900"
+        android:background="@drawable/btn_orange_selector"
         android:textColor="@color/white"
+        android:textSize="18sp"
         />
 
 </LinearLayout>
