--- a/shippingcity/res/layout/activity_personal_integral.xml
+++ b/shippingcity/res/layout/activity_personal_integral.xml
@@ -9,15 +9,15 @@
         android:id="@+id/txt_total_credit"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:minHeight="80dp"
+        android:minHeight="60dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         app:nameText="积分总额"
-        app:nameSize="16sp"
-        app:nameColor="#646464"
+        app:nameSize="18sp"
+        app:nameColor="#4c4c4c"
         app:valueText="150"
         app:valueSize="18sp"
-        app:valueColor="#FFA027"
+        app:valueColor="#FF9000"
         />
     <View 
         android:layout_width="fill_parent"
