--- a/shippingcity/res/values/color.xml
+++ b/shippingcity/res/values/color.xml
@@ -5,6 +5,8 @@
           颜色对照表:
     https://github.com/MatthewYork/Colours 
     -->
+    <color name="btn_orange_default_color">#FF9900</color>
+    <color name="btn_orange_press_color">#E58E12</color>
     <color name="txt_sumbit_color">#78A9EB</color>
     <!-- 货盘区列表内容字体颜色 -->
 	<color name="pallet_item_content_text_color">#c0c0c0</color>
