--- a/shippingcity/res/layout/activity_personal_setting.xml
+++ b/shippingcity/res/layout/activity_personal_setting.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:minHeight="50dp"
+        android:layout_marginTop="10dp"
         android:background="#ffffff"
         android:layout_alignParentTop="true"
         >
@@ -28,8 +29,9 @@
 		    android:layout_height="fill_parent"
 		    android:gravity="center_vertical"
 		    android:paddingRight="20dp"
-		    android:drawableRight="@drawable/ic_launcher"
+		    android:drawableRight="@drawable/right_arrow"
 		    android:text="当前版本1.0.5"
+		    android:drawablePadding="13dp"
 		    android:textColor="#B8B8B8"
 		    android:textSize="15sp"
 	    />
@@ -44,7 +46,7 @@
 	    android:layout_below="@+id/layout_check_update"
 	    android:text="意见反馈"
 	    android:background="#ffffff"
-	    android:drawableRight="@drawable/ic_launcher"
+	    android:drawableRight="@drawable/right_arrow"
 	    android:paddingLeft="20dp"
 	    android:paddingRight="20dp"
 	    />
@@ -58,7 +60,7 @@
 	    android:layout_below="@+id/txt_feedback"
 	    android:text="使用指南"
 	    android:background="#ffffff"
-	    android:drawableRight="@drawable/ic_launcher"
+	    android:drawableRight="@drawable/right_arrow"
 	    android:paddingLeft="20dp"
 	    android:paddingRight="20dp"
 	    />
