--- a/shippingcity/res/layout/activity_picture_select_dialog.xml
+++ b/shippingcity/res/layout/activity_picture_select_dialog.xml
@@ -11,7 +11,8 @@
 	    android:layout_height="wrap_content"
 	    android:minHeight="50dp"
 	    android:text="拍照"
-	    android:textSize="18sp"
+	    android:textSize="15sp"
+	    android:textColor="#4c4c4c"
 	    android:background="#ffffff"
 	    android:gravity="center"
 	    />
@@ -26,7 +27,8 @@
 	    android:layout_height="wrap_content"
 	    android:minHeight="50dp"
 	    android:text="从手机相册选择"
-	    android:textSize="18sp"
+	    android:textSize="15sp"
+	    android:textColor="#4c4c4c"
 	    android:background="#ffffff"
 	    android:gravity="center"
 	    />
@@ -37,7 +39,8 @@
 	    android:minHeight="50dp"
 	    android:layout_marginTop="15dp"
 	    android:text="取消"
-	    android:textSize="18sp"
+	    android:textSize="15sp"
+	    android:textColor="#4c4c4c"
 	    android:background="#ffffff"
 	    android:gravity="center"
 	    />
