--- a/shippingcity/res/layout/activity_regist.xml
+++ b/shippingcity/res/layout/activity_regist.xml
@@ -10,6 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="请输入手机号"
+        android:inputType="number"
         android:minHeight="50dp" />
 
     <LinearLayout
@@ -40,6 +41,7 @@
             android:minWidth="120dp"
             android:paddingRight="10dp"
             android:text="获取验证码"
+            android:textSize="14sp"
             android:textColor="#7FB4FF" />
     </LinearLayout>
 
@@ -58,7 +60,7 @@
             android:text="阅读并同意"
             android:button="@drawable/btn_check_selector"
             android:textColor="#64A6FF"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/txt_protocol"
@@ -66,7 +68,7 @@
             android:layout_height="wrap_content"
             android:text="《航运城许可及服务协议》"
             android:textColor="#64A6FF"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
     </LinearLayout>
 
     <Button
@@ -74,7 +76,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:background="#FF9900"
+        android:background="@drawable/btn_orange_selector"
         android:text="注册"
         android:textColor="@color/white" />
 
