--- a/shippingcity/res/layout/activity_pallet_spell_offer.xml
+++ b/shippingcity/res/layout/activity_pallet_spell_offer.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    android:padding="10dp"
+    android:padding="18dp"
     tools:context=".PalletSeaSpellOfferActivity" >
 
     <com.ateam.shippingcity.widget.ElasticScrollView
@@ -20,7 +20,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/myQuote_item_height"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
                 android:layout_marginBottom="20dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
