2015-4-6 wtw 空运报价接口对接

--- a/shippingcity/res/layout/activity_pallet_lord_offer.xml
+++ b/shippingcity/res/layout/activity_pallet_lord_offer.xml
@@ -10,7 +10,8 @@
     <com.ateam.shippingcity.widget.ElasticScrollView
         android:id="@+id/elasticScrollView1"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="0dp"
+        android:layout_weight="1" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -51,7 +52,7 @@
                 <EditText
                     android:id="@+id/et_TGP"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/xlist_marginl"
                     android:layout_weight="1"
                     android:background="@color/white" />
@@ -78,7 +79,7 @@
                 <EditText
                     android:id="@+id/et_FGP"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/xlist_marginl"
                     android:layout_weight="1"
                     android:background="@color/white" />
@@ -105,7 +106,7 @@
                 <EditText
                     android:id="@+id/et_FHP"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/xlist_marginl"
                     android:layout_weight="1"
                     android:background="@color/white" />
