--- a/shippingcity/res/layout/activity_pallet_offer_result.xml
+++ b/shippingcity/res/layout/activity_pallet_offer_result.xml
@@ -10,7 +10,7 @@
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="79dp"
         android:orientation="horizontal">
         <TextView 
             android:layout_width="0dp"
@@ -18,9 +18,9 @@
             android:layout_weight="1"/>
         <ImageView 
             android:id="@+id/iv_sucOrFail"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/ic_launcher"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/submitted_successfully"/>
         <TextView 
             android:layout_width="0dp"
             android:layout_height="match_parent"
