--- a/shippingcity/res/layout/activity_personal_info.xml
+++ b/shippingcity/res/layout/activity_personal_info.xml
@@ -105,7 +105,7 @@
                     android:id="@+id/iv_avatar"
                     android:layout_width="48dp"
 	    			android:layout_height="48dp"
-                    android:background="@drawable/personal_information_add_to_icon" />
+                    android:src="@drawable/personal_information_add_to_icon" />
             </LinearLayout>
 
             <View
@@ -143,7 +143,7 @@
                     android:id="@+id/iv_vtruename"
                     android:layout_width="48dp"
 	    			android:layout_height="48dp"
-                    android:background="@drawable/personal_information_add_to_icon" />
+                    android:src="@drawable/personal_information_add_to_icon" />
             </LinearLayout>
 
             <View
@@ -181,7 +181,7 @@
                     android:id="@+id/iv_card"
                     android:layout_width="48dp"
 	    			android:layout_height="48dp"
-                    android:background="@drawable/personal_information_add_to_icon" />
+                    android:src="@drawable/personal_information_add_to_icon" />
             </LinearLayout>
         </LinearLayout>
 
@@ -259,7 +259,7 @@
                     android:id="@+id/iv_vcompany"
                     android:layout_width="48dp"
 	    			android:layout_height="48dp"
-                    android:background="@drawable/personal_information_add_to_icon" />
+                    android:src="@drawable/personal_information_add_to_icon" />
             </LinearLayout>
 
             <View
