--- a/shippingcity/res/layout/activity_pallet_detail.xml
+++ b/shippingcity/res/layout/activity_pallet_detail.xml
@@ -19,96 +19,109 @@
 
             <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="@dimen/myQuote_item_height"
+                android:layout_height="53dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:gravity="center_vertical" >
 
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:text="@string/transport_type" />
+                    android:text="@string/transport_type"
+                    android:textColor="@color/my_quote_item_tination"
+                    android:textSize="@dimen/myQuote_item_tination_size" />
 
                 <TextView
                     android:id="@+id/tv_transportType"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="海运" />
+                    android:layout_marginLeft="10dp"
+                    android:text="海运"
+                    android:textColor="@color/my_quote_item_tination"
+                    android:textSize="@dimen/myQuote_item_tination_size" />
             </LinearLayout>
 
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/xlist_marginl"
-                android:layout_marginRight="@dimen/xlist_marginr"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:background="@drawable/lineColor" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/myQuote_item_height"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
 
                 <ImageView
-                    android:layout_width="@dimen/myQuote_iv_width"
-                    android:layout_height="@dimen/myQuote_iv_height"
-                    android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:src="@drawable/ic_launcher" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/starting" />
 
                 <TextView
                     android:id="@+id/tv_beginPlace"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:text="HONGKONG" />
+                    android:text="HONGKONG"
+                    android:textColor="@color/my_quote_item_tination"
+                    android:textSize="@dimen/myQuote_item_tination_size" />
             </LinearLayout>
 
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
                 android:layout_marginLeft="@dimen/myQuote_line_left_iv"
-                android:layout_marginRight="@dimen/xlist_marginr"
+                android:layout_marginRight="15dp"
                 android:background="@drawable/lineColor" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/myQuote_item_height"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
 
                 <ImageView
-                    android:layout_width="@dimen/myQuote_iv_width"
-                    android:layout_height="@dimen/myQuote_iv_height"
-                    android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:src="@drawable/ic_launcher" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/terminal_point" />
 
                 <TextView
                     android:id="@+id/tv_endPlace"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:text="ALEXANDRIA" />
+                    android:text="ALEXANDRIA"
+                    android:textColor="@color/my_quote_item_tination"
+                    android:textSize="@dimen/myQuote_item_tination_size" />
             </LinearLayout>
 
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/xlist_marginl"
-                android:layout_marginRight="@dimen/xlist_marginr"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:background="@drawable/lineColor" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/myQuote_bottom"
-                android:layout_marginTop="@dimen/myQuote_top"
-                android:gravity="center_vertical" >
+                android:layout_height="70dp"
+                android:gravity="center_vertical" 
+                android:layout_marginRight="15dp"
+                >
 
                 <ImageView
-                    android:layout_width="@dimen/myQuote_iv_width"
-                    android:layout_height="@dimen/myQuote_iv_height"
-                    android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:src="@drawable/ic_launcher" />
+                    android:id="@+id/imageView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                      android:layout_marginLeft="17dp"
+                    android:src="@drawable/date_icon" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -120,7 +133,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/my_quote_transport_time" />
+                        android:text="@string/my_quote_transport_time"
+                        android:textSize="12sp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -131,18 +145,22 @@
                             android:id="@+id/tv_goBeginTime"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="2015/03/06" />
+                            android:text="2015/03/06"
+                            android:textSize="14sp" />
 
                         <TextView
+                            android:id="@+id/textView6"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/my_quote_horizontal_line" />
+                            android:text="@string/my_quote_horizontal_line"
+                            android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/tv_goEndTime"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="2015/03/06" />
+                            android:text="2015/03/06"
+                            android:textSize="14sp" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -150,8 +168,8 @@
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/xlist_marginl"
-                android:layout_marginRight="@dimen/xlist_marginr"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:background="@drawable/lineColor" />
 
             <LinearLayout
@@ -162,9 +180,9 @@
                 android:gravity="center_vertical" >
 
                 <ImageView
-                    android:layout_width="@dimen/myQuote_iv_width"
-                    android:layout_height="@dimen/myQuote_iv_height"
-                    android:layout_marginLeft="@dimen/xlist_marginl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="17dp"
                     android:src="@drawable/ic_launcher" />
 
                 <TextView
@@ -172,22 +190,25 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:text="箱型;20GP;数量2箱;40GP;数量4箱40HQ,数量5箱" />
+                    android:text="箱型;20GP;数量2箱;40GP;数量4箱40HQ,数量5箱"
+                    android:textSize="@dimen/myQuote_item_tination_size" 
+                    />
             </LinearLayout>
 
             <View
                 android:id="@+id/view_addPhoto"
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/xlist_marginl"
-                android:layout_marginRight="@dimen/xlist_marginr"
-                android:background="@drawable/lineColor"
-                android:visibility="visible" />
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/lineColor" />
 
             <LinearLayout
                 android:id="@+id/layout_addPhoto"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/myQuote_item_height"
+                android:layout_height="44dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:visibility="visible" >
@@ -195,18 +216,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:text="@string/pallet_photo" />
-
-                <!--
-                    <LinearLayout
-                        android:id="@+id/frame_addPhoto"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="horizontal" >
-                    </LinearLayout>
-                -->
+                    android:text="@string/pallet_photo"
+                    android:textSize="12sp" />
 
                 <HorizontalScrollView
                     android:layout_width="0dp"
@@ -220,50 +231,57 @@
                         android:orientation="horizontal" >
 
                         <com.ateam.shippingcity.widget.weinxinImageShow.NoScrollGridView
-		                    android:id="@+id/gv_addPhoto"
-		                    android:layout_width="fill_parent"
-		                    android:layout_height="wrap_content"
-		                    android:horizontalSpacing="1dp"
-		                    android:numColumns="5"
-		                    android:stretchMode="columnWidth"
-		                    android:verticalSpacing="1dp"
-		                    android:visibility="visible" />
+                            android:id="@+id/gv_addPhoto"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:horizontalSpacing="1dp"
+                            android:numColumns="5"
+                            android:stretchMode="columnWidth"
+                            android:verticalSpacing="1dp"
+                            android:visibility="visible" />
                     </LinearLayout>
                 </HorizontalScrollView>
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/ic_launcher" />
+                    android:background="@drawable/right_arrow" />
             </LinearLayout>
 
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/xlist_marginl"
-                android:layout_marginRight="@dimen/xlist_marginr"
+                  android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:background="@drawable/lineColor" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/myQuote_bottom"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:gravity="center_vertical"
+                 android:layout_marginBottom="@dimen/myQuote_bottom"
                 android:layout_marginTop="@dimen/myQuote_top"
-                android:gravity="center_vertical" >
+                 >
 
                 <TextView
                     android:layout_width="@dimen/myQuote_iv_width"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
-                    android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:text="@string/note" />
+                    android:text="@string/note" 
+                     android:textSize="14sp" 
+                    />
 
                 <TextView
                     android:id="@+id/tv_notice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:text="箱型;20GP;数量2箱;40GP;数量4箱40HQ,数量5箱" />
+                    android:text="箱型;20GP;数量2箱;40GP;数量4箱40HQ,数量5箱" 
+                     android:textSize="14sp" 
+                    
+                    />
             </LinearLayout>
 
             <View
@@ -276,19 +294,27 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="@dimen/myQuote_item_height"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="@dimen/myQuote_bottom"
+                android:layout_marginTop="@dimen/myQuote_top"
                 android:gravity="center_vertical" >
 
                 <TextView
+                    android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:text="@string/quotation_deadline" />
+                    android:text="@string/quotation_deadline" 
+                    android:textSize="14sp" 
+                    />
 
                 <TextView
                     android:id="@+id/tv_offerEndTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="11-12 8:00" />
+                    android:text="11-12 8:00"
+                    android:textSize="14sp" 
+                     />
             </LinearLayout>
         </LinearLayout>
     </com.ateam.shippingcity.widget.ElasticScrollView>
@@ -317,6 +343,7 @@
             android:textColor="@color/white" />
 
         <TextView
+            android:id="@+id/tv_view"
             android:layout_width="20dp"
             android:layout_height="match_parent" />
 
@@ -325,7 +352,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/my_offer_shape"
+            android:background="@drawable/submit_button"
             android:text="@string/immediately_offer"
             android:textColor="@color/white" />
     </LinearLayout>
