--- a/shippingcity/res/layout/activity_pallet_offer.xml
+++ b/shippingcity/res/layout/activity_pallet_offer.xml
@@ -20,7 +20,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/myQuote_item_height"
+                android:layout_height="40dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
 
@@ -28,7 +28,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/ship_company_no_point"
-                    android:textSize="@dimen/xlist_pallet_title_text" />
+                    android:textSize="18sp" />
 
                 <com.ateam.shippingcity.widget.HAutoCompleteTextView
                     android:id="@+id/et_shipCompany"
@@ -39,12 +39,15 @@
                     android:background="@color/white"
                     android:completionThreshold="1"
                     android:dropDownHorizontalOffset="20dp"
+                    android:textSize="16sp"
                     android:hint="@string/input_ship_company_name" />
             </LinearLayout>
 
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
                 android:background="@drawable/lineColor" />
 
             <LinearLayout
@@ -57,96 +60,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/offer_company"
-                    android:textColor="@color/pallet_text_red"
-                    android:textSize="@dimen/xlist_pallet_title_text" />
+                    android:textColor="@color/coralColor"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="16sp" />
             </LinearLayout>
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@drawable/lineColor" />
-
+            
             <LinearLayout
-                android:id="@+id/layout_TGP"
+                android:id="@+id/layout_addBox"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/myQuote_item_height"
-                android:gravity="center_vertical"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/T_GP"
-                    android:textSize="@dimen/xlist_pallet_title_text" />
-
-                <EditText
-                    android:id="@+id/et_TGP"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:layout_weight="1"
-                    android:inputType="number"
-                    android:background="@color/white" />
-            </LinearLayout>
-
-            <View
-                android:id="@+id/view_TGP"
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/myQuote_line_left_iv"
-                android:background="@drawable/lineColor" />
-
-            <LinearLayout
-                android:id="@+id/layout_FGP"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/myQuote_item_height"
-                android:gravity="center_vertical"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/F_GP"
-                    android:textSize="@dimen/xlist_pallet_title_text" />
-
-                <EditText
-                    android:id="@+id/et_FGP"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:layout_weight="1"
-                    android:inputType="number"
-                    android:background="@color/white" />
-            </LinearLayout>
-
-            <View
-                android:id="@+id/view_FGP"
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/myQuote_line_left_iv"
-                android:background="@drawable/lineColor" />
-
-            <LinearLayout
-                android:id="@+id/layout_FHP"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/myQuote_item_height"
-                android:gravity="center_vertical"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/F_HP"
-                    android:textSize="@dimen/xlist_pallet_title_text" />
-
-                <EditText
-                    android:id="@+id/et_FHP"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:layout_weight="1"
-                    android:inputType="number"
-                    android:background="@color/white" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginLeft="10dp"
+                >
+                
             </LinearLayout>
 
             <View
@@ -158,7 +84,9 @@
                 android:id="@+id/et_addInform"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="37dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
                 android:background="@drawable/shape_rectangle_edittext"
                 android:gravity="left|top"
                 android:hint="@string/add_inform"
