2015-04-08 Helen 1、图片资源2、积分规则3、头像修改

--- a/shippingcity/res/layout/activity_personal_guide.xml
+++ b/shippingcity/res/layout/activity_personal_guide.xml
@@ -192,7 +192,8 @@
     android:id="@+id/img_back_to_top"
     android:layout_width="96dp"
     android:layout_height="96dp"
-    android:background="@drawable/ic_launcher"
+    android:contentDescription="@string/app_name"
+    android:background="@drawable/personal_center_usage_guide_goto_top_icon"
     android:layout_alignParentBottom="true"
     android:layout_alignParentRight="true"
     android:layout_marginRight="20dp"
