2015-04-09 Helen 1、身份证、工牌上传完成2、货盘区添加判断，避免一进去请求全部3、sysutil的时间格式问题

--- a/shippingcity/res/layout/activity_personl_center_dialog.xml
+++ b/shippingcity/res/layout/activity_personl_center_dialog.xml
@@ -38,7 +38,7 @@
 	    android:textColor="#f64c4c"
 	    android:textSize="14sp"
 	    android:text="尚未认证"
-	    android:visibility="gone"
+	    android:visibility="invisible"
 	    />
 	</LinearLayout>
 	<TextView 
