--- a/shippingcity/res/layout/activity_pallet_spell_offer.xml
+++ b/shippingcity/res/layout/activity_pallet_spell_offer.xml
@@ -75,10 +75,11 @@
                 <EditText
                     android:id="@+id/et_money"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/xlist_marginl"
                     android:layout_weight="1"
                     android:background="@color/white"
+                    android:inputType="numberDecimal"
                     android:hint="@string/input_price" />
 
                 <TextView
